compiler/tools/fpp-to-dict/test/top/floatUserDataSizeConstant.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/floatUserDataSizeConstant.fpp:31.9
        constant CONTAINER_USER_DATA_SIZE = 1.5
        ^
error: the F Prime framework constant Fw.DpCfg.CONTAINER_USER_DATA_SIZE must have an integer type
